# houdini

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  EXTENSION-SETUP.md  INSTALL.md  LICENSE  README.md  SECURITY.md  VERIFICATION.md  build.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: NER.md  analytics.md  architecture.md  extension.md  grouping.md  install.md  privacy.md
examples/: label_smoke.rs
extension/: README.md  background.js  capture.js  capture_actions.js  interceptor.js  manifest.json  relay.js
extension/test/: actions.test.mjs  capture.test.mjs  interceptor.test.mjs
packaging/: bundle.sh  entitlements.plist  make_appicon.py
packaging/extension-key/: extension-id.txt  pubkey-b64.txt
scripts/: entitlements.plist  sign.sh
src/: agent_actions.rs  analytics.rs  analytics_job.rs  analyze_once.rs  app.rs  attribution.rs  browserhost.rs  config.rs  detector.rs  diagnose.rs  export.rs  ingest_actions.rs  keychain.rs  lib.rs  logging.rs  loginitem.rs  main.rs  monitor.rs  nativehost.rs  ner.rs  netpresence.rs  permissions.rs  redact.rs  session.rs  store.rs  summary.rs  taxonomy.rs  timestamp.rs  tray_glyph.rs  updater.rs  webingest.rs
src/capture/: ax.rs  frontmost.rs  mod.rs  ocr.rs  screen.rs
src/ingest/: claude_code.rs  codex.rs  mod.rs  openclaw.rs
tests/: analytics_e2e.rs  ingest_e2e.rs
