[package]
name = "ai-usage-monitor"
version = "0.2.3"
edition = "2021"
description = "Internal, consenting-only macOS monitor that detects AI-inference sessions on screen (world-model streaming detection, no per-app rules) and stores redacted, reviewable extracts for the AI-research usage study."
license = "MIT"
publish = false

# Portable, fully-tested core (no macOS frameworks) lives in the lib so `cargo
# test` runs it anywhere without linking AppKit/Vision. The native capture +
# tray shell is the binary (macOS-only, cfg-gated).
[lib]
name = "ai_usage_monitor"
path = "src/lib.rs"

[[bin]]
name = "ai-usage-monitor"
path = "src/main.rs"

[dependencies]
# --- portable core ---
regex = "1"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
directories = "6"
rand = "0.8"
log = "0.4"
env_logger = "0.11"

# --- optional NER redaction layer (feature-gated; model provisioned by the
#     operator, never bundled — see docs/NER.md). Uses gline-rs (crate lib name
#     `gliner`), the documented GLiNER-in-Rust pipeline, over ort. `orp` supplies
#     RuntimeParameters for the ONNX runtime. ---
gline-rs = { version = "1", optional = true }
orp = { version = "0.9", optional = true }

# --- macOS native (only compiled on macOS) ---
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray", "NSDictionary", "NSValue", "NSEnumerator", "NSDate", "NSRunLoop", "NSNotification", "NSTimer", "block2"] }
objc2-core-foundation = { version = "0.3", features = ["CFString", "CFArray", "CFDictionary", "CFNumber", "CFRunLoop", "CFDate"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSResponder", "NSWorkspace", "NSRunningApplication"] }
objc2-application-services = { version = "0.3", features = ["libc"] }
objc2-core-graphics = { version = "0.3", features = ["CGImage"] }
objc2-vision = { version = "0.3", features = ["VNRequest", "VNRecognizeTextRequest", "VNObservation", "VNTypes", "objc2-core-graphics"] }
objc2-screen-capture-kit = { version = "0.3", features = ["SCScreenshotManager", "SCShareableContent", "SCStream", "objc2-core-graphics", "objc2-core-media", "block2"] }
objc2-core-media = { version = "0.3", features = ["CMSampleBuffer"] }
block2 = "0.6"
# tray-icon re-exports the exact `muda` it was built against as `tray_icon::menu`
# — depend on it there, never on `muda` directly, so the two can't diverge into
# incompatible duplicate crates.
tray-icon = "0.24"
macos-accessibility-client = "0.0.2"

[features]
default = []
# Turn on the GLiNER NER redaction layer. Requires a provisioned model (see
# docs/NER.md) and passes a load-and-seeded-name self-test before it is trusted.
ner = ["dep:gline-rs", "dep:orp"]

[profile.release]
lto = true
opt-level = 3
strip = true
