[package]
name = "ai-usage-monitor"
version = "0.4.2"
edition = "2021"
description = "Internal, consenting-only macOS monitor that records AI usage from tools' own local transcripts and process network activity (plus an optional browser extension for web chats), storing redacted, structured records for the AI-research usage study."
license = "MIT"
publish = false

# Portable, fully-tested core (no macOS frameworks) lives in the lib so `cargo
# test` runs it anywhere without linking AppKit/Vision. The native capture +
# tray shell is the binary (macOS-only, cfg-gated).
[lib]
name = "ai_usage_monitor"
path = "src/lib.rs"

[[bin]]
name = "ai-usage-monitor"
path = "src/main.rs"

[dependencies]
# --- portable core ---
regex = "1"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
directories = "6"
rand = "0.8"
log = "0.4"
env_logger = "0.11"

# --- optional NER redaction layer (feature-gated; model provisioned by the
#     operator, never bundled — see docs/NER.md). Uses gline-rs (crate lib name
#     `gliner`), the documented GLiNER-in-Rust pipeline, over ort. `orp` supplies
#     RuntimeParameters for the ONNX runtime. ---
gline-rs = { version = "1", optional = true }
orp = { version = "0.9", optional = true }

# --- macOS native (only compiled on macOS) ---
# The monitor no longer captures the screen: detection reads local transcripts
# (portable core) and observes the process table via `libproc` (Layer B). So the
# heavy Vision / ScreenCaptureKit / Accessibility frameworks are gone — all that
# remains here is the menu-bar shell (AppKit + tray-icon) and libproc.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray", "NSDate", "NSRunLoop", "NSNotification", "NSTimer", "block2"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSResponder", "NSWorkspace", "NSRunningApplication"] }
block2 = "0.6"
# tray-icon re-exports the exact `muda` it was built against as `tray_icon::menu`
# — depend on it there, never on `muda` directly, so the two can't diverge into
# incompatible duplicate crates.
tray-icon = "0.24"
# Per-process socket enumeration (proc_pidfdinfo) for network presence. No root,
# no entitlement — own-user processes only, exactly what `lsof` shows.
libproc = "0.14"

[features]
default = []
# Turn on the GLiNER NER redaction layer. Requires a provisioned model (see
# docs/NER.md) and passes a load-and-seeded-name self-test before it is trusted.
ner = ["dep:gline-rs", "dep:orp"]

[profile.release]
lto = true
opt-level = 3
strip = true
